simplify removal of a process